# ChangeLog for media-libs/mlt
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mlt/ChangeLog,v 1.59 2010/05/24 20:12:14 darkside Exp $

  24 May 2010; Jeremy Olexa <darkside@gentoo.org> mlt-0.5.4.ebuild:
  Since this ebuild is already EAPI3, add EPREFIX to ruby call and add
  keywords. bug 321033

*mlt-0.5.4 (28 Apr 2010)

  28 Apr 2010; Samuli Suominen <ssuominen@gentoo.org> +mlt-0.5.4.ebuild:
  Version bump wrt #310071. USE="vdpau" wrt #306361 by Fabio Bonfante.
  Improve python eclass handling wrt #313539 by Arfrever Frehtes Taifersar
  Arahesis. *magick deps wrt #314295 by Wojciech Porczyk.

  26 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> mlt-0.5.0.ebuild:
  Missing pkgconfig depend wrt #311409.

*mlt-0.5.0 (22 Feb 2010)

  22 Feb 2010; Samuli Suominen <ssuominen@gentoo.org> +mlt-0.5.0.ebuild:
  Version bump.

  28 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> mlt-0.4.6.ebuild,
  mlt-0.4.6-r1.ebuild:
  Stop using deprecated kde-functions.eclass.

  17 Dec 2009; Christian Faulhammer <fauli@gentoo.org> mlt-0.4.6.ebuild:
  stable x86, bug 291947

  04 Dec 2009; Samuli Suominen <ssuominen@gentoo.org> mlt-0.4.6.ebuild:
  amd64 stable wrt #291947

  29 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Just comment out some of the SWIG USE flags that didn't compile yet.

*mlt-0.4.6-r1 (26 Nov 2009)

  26 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +mlt-0.4.6-r1.ebuild,
  metadata.xml:
  Add several of the SWIG bindings, the Python one will be used for
  media-video/openshot per bug #283673.

  12 Nov 2009; Alexis Ballier <aballier@gentoo.org>
  -files/mlt-0.3.6-qimage.patch, -mlt-0.4.4.ebuild:
  remove old

*mlt-0.4.6 (20 Oct 2009)

  20 Oct 2009; Alexis Ballier <aballier@gentoo.org> +mlt-0.4.6.ebuild:
  version bump

  20 Oct 2009; Alexis Ballier <aballier@gentoo.org>
  -files/mlt-0.2.3-nostrip.patch, -mlt-0.3.8-r1.ebuild,